--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -33,7 +33,11 @@
     </section>
     <footer class="footer">
         <h3 class="is-size-4 mb-4">Interiorshop</h3>
-        <a href="{% url 'become_vendor' %}">Become vendor</a> 
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'vendor_admin' %}">Vendor admin</a>
+        {% else %}
+            <a href="{% url 'become_vendor' %}">Become vendor</a> 
+        {% endif %}
     </footer>
 </body>
 </html>
