--- a/apps/core/templates/core/frontpage.html
+++ b/apps/core/templates/core/frontpage.html
@@ -5,5 +5,12 @@ Welcome | Interiorshop
 
 
 {% block content %}
-    <h1>Frontpage</h1>
+    <div class="columns is-multiline mb-6">
+        <div class="column is-12 has-text-centered mt-6 mb-6">
+            <h2 class="is-size-3">Latest products</h2>
+        </div>
+        {% for product in latest_products %}
+            {% include 'product/parts/list_item.html' %}
+        {% endfor %}
+    </div>
 {% endblock %}
