--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -21,6 +21,20 @@
             </a>
         </div>
         <div class="navbar-menu" id="main-navbar">
+            <div class="navbar-start">
+                <div class="navbar-item">
+                    <form method="GET" action="{% url 'search' %}">
+                        <div class="field has-addons">
+                            <div class="control">
+                                <input type="text" class="input is-danger" name="query" placeholder="Search">
+                            </div>
+                            <div class="control">
+                                <button class="button is-black is-uppercase">Search</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>    
+            </div>
             <div class="navbar-end">
                 {% for category in menu_category %}
                     <a href="{% url 'category' category.slug %}" class="navbar-item">{{ category.title }}</a>
