--- a/apps/product/templates/product/product.html
+++ b/apps/product/templates/product/product.html
@@ -11,8 +11,33 @@
     {% endif %}
     <h1 class="title">{{ product.title }}, ${{ product.price }}</h1>
     <p mb-6><span class="tag is-dark">{{ product.vendor.name }}</span></p>
+
     <br>
+
     <p>{{ product.description  }}</p>
+
+    <hr>
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="notification is-success is-toast">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+
+    <form method="POST" action=".">
+        {% csrf_token %}
+        <div class="field has-addons">
+            <div class="control">
+                <input type="number" class="input" name="quantity" value="1" min="1">
+            </div>
+            <div class="control">
+                <button class="button is-dark is-uppercase">Add to cart</button>
+            </div>
+        </div>
+    </form>
+
     {% if similar_products %}
         <hr>
         <div class="columns is-multiline">
