--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -40,6 +40,11 @@
                     <a href="{% url 'category' category.slug %}" class="navbar-item">{{ category.title }}</a>
                 {% endfor %}
                 <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
+                <div class="navbar-item">
+                    <a href="{% url 'cart' %}" clas="button is-dark">Cart {% if cart %} ({{ cart|length }}) {% endif %}</a>
+                </div>
+
+                </div>
             </div>
         </div>
     </nav>
