--- a/apps/cart/templates/cart/cart.html
+++ b/apps/cart/templates/cart/cart.html
@@ -34,7 +34,7 @@
                                     <a href="?change_quantity={{ item.id }}&quantity=-1">-</a>
                                     <a href="?change_quantity={{ item.id }}&quantity=1">+</a>
                                 </td>
-                                <td>${{ item.total_price }}</td>
+                                <td>€{{ item.total_price }}</td>
                                 <td><a href="?remove_from_cart={{ item.id }}" class="delete">Remove</a></td>
                             </tr>
                         {% endfor %}
@@ -45,7 +45,7 @@
                             <td></td>
                             <td><strong>Total cost</strong></td>
                             <td><strong>{{ cart|length}}</strong></td>
-                            <td colspan="2"><strong>${{ cart.get_total_cost }}</strong></td>
+                            <td colspan="2"><strong>€{{ cart.get_total_cost }}</strong></td>
                         </tr>
                     </tfoot>
                 </table>
@@ -158,4 +158,41 @@
     {% else %}
         <p>You don't have any products in your cart!</p>
     {% endif %}
+{% endblock %}
+
+{% block scripts %}
+    <script src="https://js.stripe.com/v3/"></script>
+    <script>
+        var stripe = Stripe('{{ stripe_pub_key }}');
+        var elements = stripe.elements();
+
+        var card = elements.create('card');
+
+        card.mount('#card-element');
+
+        var form = document.getElementById('payment-form');
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            stripe.createToken(card).then(function(result) {
+                if (result.error) {
+                    var errorElement = document.getElementById('card-errors');
+                    errorElement.textContent = result.error.message;
+                } else {
+                    stripeTokenHandler(result.token);
+                }
+            });
+        });
+
+        function stripeTokenHandler(token) {
+            var form = document.getElementById('payment-form');
+            var hiddenInput = document.createElement('input');
+            hiddenInput.setAttribute('type', 'hidden');
+            hiddenInput.setAttribute('name', 'stripe_token');
+            hiddenInput.setAttribute('value', token.id);
+            form.appendChild(hiddenInput);
+
+            form.submit();
+        }
+    </script>
 {% endblock %}
