--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -41,7 +41,7 @@
                 {% endfor %}
                 <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
                 <div class="navbar-item">
-                    <a href="{% url 'cart' %}" clas="button is-dark">Cart {% if cart %} ({{ cart|length }}) {% endif %}</a>
+                    <a href="{% url 'cart' %}" clas="button is-black">Cart {% if cart %} ({{ cart|length }}) {% endif %}</a>
                 </div>
 
                 </div>
@@ -61,5 +61,8 @@
             <a href="{% url 'become_vendor' %}">Become vendor</a> 
         {% endif %}
     </footer>
+
+    {% block scripts %}
+    {% endblock %}
 </body>
 </html>
