--- a/apps/product/templates/product/product.html
+++ b/apps/product/templates/product/product.html
@@ -9,7 +9,7 @@
             <img src="{{ product.image.url }}">
         </figure>
     {% endif %}
-    <h1 class="title">{{ product.title }}, ${{ product.price }}</h1>
+    <h1 class="title">{{ product.title }}, €{{ product.price }}</h1>
     <p mb-6><span class="tag is-dark">{{ product.vendor.name }}</span></p>
 
     <br>
