--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    <link href="{% static 'images/icons8-bedroom-interior-48.png' %}" rel="shortcut icon"/>
     <script src="{% static 'scripts/main.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
@@ -41,7 +42,7 @@
                 {% endfor %}
                 <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
                 <div class="navbar-item">
-                    <a href="{% url 'cart' %}" clas="button is-black">Cart {% if cart %} ({{ cart|length }}) {% endif %}</a>
+                    <a href="{% url 'cart' %}"><img src="{% static 'images/shopping-cart.png' %}">{% if cart %} {{ cart|length }} {% endif %}</a>
                 </div>
 
                 </div>
